fix: make basic image editor panning work on mobile

--- a/static/css/parts/ViewletEditorImage.css
+++ b/static/css/parts/ViewletEditorImage.css
@@ -1,5 +1,6 @@
 .Viewlet[data-viewlet-id='EditorImage'] {
   cursor: grab;
+  touch-action: none;
 }
 
 .ViewletImage {
